--- a/.semaphore/certificate-generate.yml
+++ b/.semaphore/certificate-generate.yml
@@ -1,5 +1,5 @@
 version: v1.0
-name: Generate Certificate - ${{parameters.CLOUD_TEST_ENV_PREFIX}}
+name: 'Generate Certificate - ${{parameters.CLOUD_TEST_ENV_PREFIX}}'
 agent:
   machine:
     type: f1-standard-2
@@ -10,22 +10,22 @@ blocks:
     task:
       env_vars:
         - name: BASE_DOMAIN
-          value: "test.sonprem.com"
+          value: test.sonprem.com
         - name: ROLE_ARN
-          value: "arn:aws:iam::451765615567:role/sem-install-dns-update-role"
+          value: 'arn:aws:iam::451765615567:role/sem-install-dns-update-role'
       jobs:
         - name: Generate Certificate
           commands:
-            - export DOMAIN="${CLOUD_TEST_ENV_PREFIX}.${BASE_DOMAIN}"
-            - export SESSION_NAME="semaphore-job-${SEMAPHORE_JOB_ID}"
+            - 'export DOMAIN="${CLOUD_TEST_ENV_PREFIX}.${BASE_DOMAIN}"'
+            - 'export SESSION_NAME="semaphore-job-${SEMAPHORE_JOB_ID}"'
             - checkout && cd ephemeral_environment
-            - eval $(aws sts assume-role-with-web-identity --role-arn $ROLE_ARN --role-session-name $SESSION_NAME --web-identity-token $SEMAPHORE_OIDC_TOKEN --query "Credentials.[AccessKeyId,SecretAccessKey,SessionToken]" | jq -r '"export AWS_ACCESS_KEY_ID=\(.[0]) AWS_SECRET_ACCESS_KEY=\(.[1]) AWS_SESSION_TOKEN=\(.[2])"')
-            - git clone https://github.com/acmesh-official/acme.sh.git
+            - 'eval $(aws sts assume-role-with-web-identity --role-arn $ROLE_ARN --role-session-name $SESSION_NAME --web-identity-token $SEMAPHORE_OIDC_TOKEN --query "Credentials.[AccessKeyId,SecretAccessKey,SessionToken]" | jq -r ''"export AWS_ACCESS_KEY_ID=\(.[0]) AWS_SECRET_ACCESS_KEY=\(.[1]) AWS_SESSION_TOKEN=\(.[2])"'')'
+            - 'git clone https://github.com/acmesh-official/acme.sh.git'
             - cd acme.sh
             - ./acme.sh --install --force
-            - export CERT_DIR="certs/${CLOUD_TEST_ENV_PREFIX}"
+            - 'export CERT_DIR="certs/${CLOUD_TEST_ENV_PREFIX}"'
             - mkdir -p "./$CERT_DIR"
-            - artifact pull project "${CERT_DIR}" -d ./${CERT_DIR} || true
+            - 'artifact pull project "${CERT_DIR}" -d ./${CERT_DIR} || true'
             - echo $DOMAIN
             - |
               if [ ! -f "./$CERT_DIR/${CLOUD_TEST_ENV_PREFIX}.cer" ]; then
