--- a/.semaphore/env-destroy-all.yml
+++ b/.semaphore/env-destroy-all.yml
@@ -7,7 +7,7 @@ agent:
 global_job_config:
   prologue:
     commands:
-      - export DOMAIN="${CLOUD_TEST_ENV_PREFIX}.${BASE_DOMAIN}"
+      - 'export DOMAIN="${CLOUD_TEST_ENV_PREFIX}.${BASE_DOMAIN}"'
 blocks:
   - name: Destroy
     task:
@@ -26,13 +26,10 @@ blocks:
                 - radwo
                 - vmaksimovic
           commands:
-            # If nothing was pulled, the env does not exist, so just end the job as 'succesfull'
             - 'artifact pull project "environments/${CLOUD_TEST_ENV_PREFIX}/terraform.tar.gz" -d terraform.tar.gz || { echo "Environment ${CLOUD_TEST_ENV_PREFIX} does not exist, skipping." && export SEMAPHORE_JOB_RESULT=passed && return 130; }'
-            # We dont know the name of the folder inside terraform.tar.gz, so that is why we cd to the newest one
             - tar -xzf terraform.tar.gz && cd "$(ls -td */ | head -1)"
-            # This will be present only in the case of single-vm deployments
-            - artifact pull project "environments/${CLOUD_TEST_ENV_PREFIX}/private-ssh-key.pub" -d /tmp/ssh-key.pub || true
+            - 'artifact pull project "environments/${CLOUD_TEST_ENV_PREFIX}/private-ssh-key.pub" -d /tmp/ssh-key.pub || true'
             - make auth
             - terraform init
             - make terraform.destroy
-            - artifact yank project "environments/${CLOUD_TEST_ENV_PREFIX}"
+            - 'artifact yank project "environments/${CLOUD_TEST_ENV_PREFIX}"'
